# alphabot

./: .gitignore  ALPHABOT_COLAB_WORKFLOW_GUIDE.md  ALPHABOT_ML_TRAINING_COLAB.ipynb  ALPHABOT_ML_TRAINING_COLAB_v2.ipynb  ALPHABOT_ML_TRAINING_COLAB_v2_backup_20250802_143207.ipynb  ALPHABOT_ML_TRAINING_COLAB_v2_backup_import_20250802_151540.ipynb  ALPHABOT_ML_TRAINING_COLAB_v2_backup_path_20250802_145348.ipynb  ALPHABOT_ML_TRAINING_COLAB_v2_backup_reorganize_20250802_143759.ipynb  ANALYSE_AMELIORATIONS_PERFORMANCE.md  GUIDE_COLAB_AGENTIQUE.md  Makefile  OPTIMIZED_CONFIG.json  README_ENTRAINEMENT_COLAB.md  README_ENTRAINEMENT_MODELES.md  cellule_5_pattern.txt  cellule_6_code.txt  champions.json  colab_utils.py  drive_manager.py  eval_metrics.json  fix_accelerate_final_cell.py  fix_cell6_transformers.py  fix_colab_notebook.py  fix_drive_path.py  fix_final_cell_git_clone.py  fix_final_cell_robust.py  fix_import_alphabot.py  fix_imports_conflicts.py  fix_notebook_complete.py  fix_numpy_compatibility.py  fix_redis_install.py  generate_notebook_v2.py  insert_cell9_evaluation.py  insert_test_cells.py  pattern_debug.txt  plan_detaillé.md  production_decision_matrix.md  pyproject.toml  readme.md  reorganize_notebook.py  (+5 more)
.claude/: settings.local.json
docs/: ALPHABOT_V2_INTEGRATION_PLAN.md  ANALYSE_COMPARATIVE_COMPLETE.md  COMPARAISON_COMPLETE_SCRIPTS.md  DOCUMENTATION_AVANCEES_PROJET_ALPHABOT.md  DOCUMENTATION_COMPLETE_ELITE_FINAL.md  IMPLEMENTATION_INSTRUCTIONS.md  INDEX_DOCUMENTATION.md  OPTIMIZED_CONFIG.json  PLAN_AMELIORATION_EXPERT_V2.md  RAPPORT_EXPERTISE_ALPHABOT.md  RAPPORT_FINAL_ALPHABOT_SYSTEMS.md  RAPPORT_VALIDATION_FINALE.md  README_ENTRAINEMENT_COLAB.md  gantt_chart.txt  phase4_bilan.md  phase5_bilan.md  phase6_roadmap.md  plan_detaillé.md  planning.yml  pyproject.toml  resources.md  retro_P3.md  risk_analysis.md  risk_policy.yaml  specs.md  sprint33_34_implementation.md  systems_performance_summary.md
scripts/: add_auto_resume_and_progress.py  fix_all_data_variable.py  fix_ambiguous_series_error.py  fix_cell_4_stopping_issue.py  fix_colab_drive_mount.py  fix_colab_drive_mount_v2.py  fix_data_preparation.py  fix_dataset_iteration.py  fix_empty_dataset_and_l4_gpu.py  fix_final_dnn_error.py  fix_format_error_final.py  fix_gpu_crash_and_base_path.py  fix_import_error.py  fix_indentation_error.py  fix_lstm_completely.py  fix_lstm_model.py  fix_notebook_errors.py  fix_notebook_v2.py  fix_yfinance_warnings.py  (+4 more)
(+97 files in other folders)
